kubernetes/kubernetes_3.4/canary-ingress/new-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      run: new-nginx
  template:
    metadata:
      labels:
        run: new-nginx
    spec:
      volumes:
        - name: index
          configMap:
            name: new-nginx-configmap
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: new-nginx
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
          - name: index
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: new-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: new-nginx
  sessionAffinity: None
  type: NodePort
