kubernetes/kubernetes_3.4/canary-ingress/old-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: old-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      run: old-nginx
  template:
    metadata:
      labels:
        run: old-nginx
    spec:
      volumes:
        - name: index
          configMap:
            name: old-nginx-configmap
      containers:
      - image: nginx:stable
        imagePullPolicy: Always
        name: old-nginx
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
          - name: index
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: old-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: old-nginx
  sessionAffinity: None
  type: NodePort
